k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        name: backend-pod
        namespace: chat-app
    spec:
      containers: 
        - name: chatapp-backend
          image: elsa888/chatapp-backend:latest
          ports:
            - containerPort: 5001
